style.css
:root {
    --hero-height: 60vh;
    --hero-max-height: 700px;

    --tea-green: #cdeac0ff;
    --rose-pompadour: #e27396ff;
    --dark-rose: rgb(192, 79, 114);
    --amaranth-pink: #ea9ab2ff;
    --mimi-pink: #efcfe3ff;
    --dark-slate-gray: #254441ff;

    --step--2: clamp(0.7813rem, 0.7747rem + 0.0326cqi, 0.8rem);
    --step--1: clamp(0.9375rem, 0.9158rem + 0.1087cqi, 1rem);
    --step-0: clamp(1.125rem, 1.0815rem + 0.2174cqi, 1.25rem);
    --step-1: clamp(1.35rem, 1.2761rem + 0.3696cqi, 1.5625rem);
    --step-2: clamp(1.62rem, 1.5041rem + 0.5793cqi, 1.9531rem);
    --step-3: clamp(1.944rem, 1.771rem + 0.8651cqi, 2.4414rem);
    --step-4: clamp(2.3328rem, 2.0827rem + 1.2504cqi, 3.0518rem);
    --step-5: clamp(2.7994rem, 2.4462rem + 1.7658cqi, 3.8147rem);
  }
  
@font-face {
  font-family: "LilitaOne";
  src: url("./Fonts/LilitaOne-Regular.ttf");
}

* {
  margin: 0;
  padding: 0;
}

.TopBar {
  height: 6rem;
  width: 100%;
  background-color: var(--mimi-pink);
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: sticky;
  top: 0;

  z-index: 10;
  
  
}

.TopBar ul {
  list-style: none;
  display: flex;
  justify-content: flex-end;
  width: 30%;
  margin-right: 1rem;
}

.TopBar ul li a img {
  color: white;
  width: 50%;
  height: 5rem;

}

.logo {
  height: 80%;
  width: 30%;
}

.empty {
  width: 30%;
}

.NavBar {
  height: 4rem;
  background-color: var(--dark-slate-gray);
  position: sticky;
  top: 6rem;
  z-index: 10;
}





.list_base {
  margin: 0;
  height: 100%;
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: stretch;
}

.list_base li {
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

.list_base li a {
  line-height: 4rem;
  font-size: var(--step--1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}


.list_1 li a {

  text-align: center;
  text-decoration: none;
  
  color: var(--mimi-pink);
  font-family: "LilitaOne", sans-serif;
  background-color: rgb(30, 53, 53);
}

.list_1 li a:hover {
  color: white;
  background-color: rgb(44, 78, 78);
  padding-left: 1rem;
  padding-right: 1rem;
}




.list_2 {
  margin: 0;
  height: 100%;
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: stretch;
  
}

.list_2 li {
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

.list_2 li a {

  text-align: center;
  text-decoration: none;
  
  color: var(--dark-rose);
  font-family: "LilitaOne", sans-serif;
  background-color: var(--mimi-pink);
}

.list_2 li a:hover {
  color: var(--amaranth-pink);
  background-color: white;
  padding-left: 1rem;
  padding-right: 1rem;
}



.Colors {
  display: flex;
  justify-content: space-evenly;
  width: 90%;
  margin-inline: auto;
  flex-wrap: wrap;
  margin-block: 2rem;
  row-gap: 1rem;
}

.ColorBox {
  aspect-ratio: 1/1;
  width: min(40% - 0.5rem, var(--container-max, 15ch));
  
  border-style: solid;
  display: flex;
  align-items: center;
  justify-content: center;
}

.color1 {
  background-color: var(--rose-pompadour);
}

.color1 p {
  color: white;
}

.color2 {
  background-color: var(--mimi-pink);
}
.color3 {
  background-color: var(--dark-slate-gray);
}

.color3 p {
  color: var(--mimi-pink);
}

.color4 {
  background-color: white;
}


.image_box {
  width: min(80% - 0rem, var(--container-max, 100ch));
  margin-inline: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1rem;
}

.image_box img {
  width: min(80% - 2rem, var(--container-max, 15ch));
  height: auto;
  flex-grow: 1;
  object-fit: cover;
}


.page {
  width: 100%;
  height: 100%;
  background-color:  var(--rose-pompadour);
}

.Hero {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
    
    width: min(80% - 0rem, var(--container-max, 100ch));
    height: 100%;
    margin: auto;
    
    background-color: white;
}

.Hero img {
        margin: 2rem;
        object-fit: cover;
        width: min(60% - 1rem, var(--container-max, 40ch));
        aspect-ratio: 1/1;
        border-radius: 100%;

        box-shadow: -0.5rem 0.5rem var(--rose-pompadour);

        
}

.box {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: baseline;

  text-align: left;
  
  width: min(80% - 0rem, var(--container-max, 40ch));
  height: 100%;
  flex-grow: 0.2;
  margin: 1rem;
  

  
}
.box a {
  background-color: var(--tea-green);
  margin-top: 10%;

  text-decoration: none;
  font-family: "LilitaOne", sans-serif;
  color: var(--dark-slate-gray);

  padding: 1rem;
  padding-left: 2rem;
  padding-right: 2rem;
  border-radius: 10rem;
}

.box a:hover {
  background-color: rgb(198, 255, 172);

}

.Header_Text {
  font-family: "LilitaOne", sans-serif;
  
  
}
h1 {
  font-size: var(--step-4);
  color: var(--rose-pompadour);
}
h2 {
  font-size: var(--step-3);
  color: var(--rose-pompadour);
}
h3 {
  font-size: var(--step-2);
  color: var(--rose-pompadour);
}
h4 {
  font-size: var(--step-1);
  color: var(--dark-rose);
}
p {
  font-family: Arial, Helvetica, sans-serif;
  color: var(--dark-rose);
  margin-top: 1rem;
  font-size: var(--step-0);
}
.text_pink {
  font-family: Arial, Helvetica, sans-serif;
  color: var(--rose-pompadour);
  margin-top: 1rem;
}




.infopage {
  width: min(80% - 0rem, var(--container-max, 100ch));
  margin-inline: auto;
  padding-top: 4rem;
  padding-bottom: 6rem;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;

}

.infopage img {
  width: inherit;
  margin-top: 1rem;
}


.infoText {
  display: flex;
  width: 100%;
  z-index: 3;
}

.infoText .container {
  width: min(80% - 0rem, var(--container-max, 100ch));
  height: 70%;
  margin: auto;
}

.infoText p {
  margin-top: 2rem;
}
  






.profile {
  background-color: white;
  width: min(80% - 0rem, var(--container-max, 100ch));
  padding-top: 3rem;
  padding-bottom: 2rem;

  margin-inline: auto;
}

.header_box {
  width: 80%;
  margin-inline: auto;
}

.text_box {
  margin-top: 2rem;
  margin-bottom: 4rem;
  width: 80%;
  margin-inline: auto;
}




.pink_box {
  background-color: var(--rose-pompadour);
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.white {
  color: white;
  text-align: center;
  margin-bottom: 2rem;
}

.Employees {
  margin-inline: auto;
  display: flex;
  flex-wrap: wrap;
  width: min(80% - 0rem, var(--container-max, 100ch));
  justify-content: center;
  gap: 1.5rem;
  row-gap: 2rem;
}

.Employee_card {
  width: 25%;
  padding: 1rem;
  background-color: white;
  border-radius: 1rem;

  width: min(80% - 0rem, var(--container-max, 20ch));
  
}

.Employee_card img {
  aspect-ratio: 1/1;
  object-fit: cover;
  width: 100%;
  border-radius: 2rem;
}


.location_box {
  display: flex;
  flex-wrap: wrap;
  margin-top: 2rem;
  margin-bottom: 2rem;
  width: min(90% - 0rem, var(--container-max, 80ch));
  margin-inline: auto;

  justify-content: space-around;
}

.location_box img {
  width: min(65% - 0rem, var(--container-max, 25ch));
}

.adapt {
  width: min(50% - 0rem, var(--container-max, 80ch));
  flex-grow: 0.7;
}


.footer {
  width: 100%;
  height: 8rem;
  background-color: var(--dark-slate-gray);
  display: flex;
  justify-content: center;
}

.footer p{
  width: min(80% - 0rem, var(--container-max, 125ch));
  color: var(--mimi-pink);
  font-family: Arial, Helvetica, sans-serif;
  margin-top: 2rem;
}



@media screen and (max-width: 600px) {
  .empty {
    display: none;
  }
  .TopBar img {
    margin-left: 1rem;
    width: 40%;
  }
  .TopBar {
    height: 4rem;
  }
  .TopBar ul {
    list-style: none;
    display: flex;
    justify-content: flex-end;
    width: 40%;
    margin-right: 1rem;
  }

  .NavBar {
    top: 4rem;
    height: 3rem;
  }

  .NavBar ul li a {
    line-height: 3rem;
  }
}

